Added logo to the Navigation bar.Changed Favicon icon to bow, and updated the page title as seen on the tab text.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link href="images/favicon.png" rel="shortcut icon">
-    <title>Ludus - Electronics, Apparel, Computers, Books, DVDs & more</title>
+    <title>Pretty Little Things TX - Makeup, Accesories, and more!</title>
 
     <!--====== Google Font ======-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
@@ -36,7 +36,7 @@
 
             <!--====== Nav 1 ======-->
             <nav class="primary-nav primary-nav-wrapper--border">
-                <div class="container">
+                <div class="container-fluid">
 
                     <!--====== Primary Nav ======-->
                     <div class="primary-nav">
@@ -61,9 +61,9 @@
 
 
                         <!--====== Dropdown Main plugin ======-->
-                        <div class="menu-init" id="navigation">
+                        <div class="menu-init" id="navigation"> 
 
-                            <button class="btn btn--icon toggle-button toggle-button--secondary fas fa-cogs" type="button"></button>
+                        <button class="btn btn--icon toggle-button toggle-button--secondary fas fa-cogs" type="button"></button> 
 
                             <!--====== Menu ======-->
                             <div class="ah-lg-mode">
@@ -178,7 +178,7 @@
 
             <!--====== Nav 2 ======-->
             <nav class="secondary-nav-wrapper">
-                <div class="container">
+                <div class="container-fluid">
 
                     <!--====== Secondary Nav ======-->
                     <div class="secondary-nav">
