--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="section__text-wrap">
-                                    <h1 class="section__heading u-c-secondary u-s-m-b-12">SHOP BY DEALS</h1>
+                                    <h1 class="section__heading u-c-secondary u-s-m-b-12">SHOP BY TOP CATEGORIES</h1>
 
                                     <span class="section__span u-c-silver">BROWSE FAVOURITE DEALS</span>
                                 </div>
@@ -745,28 +745,28 @@
                                 <a class="collection" href="shop-side-version-2.html">
                                     <div class="aspect aspect--bg-grey aspect--square">
 
-                                        <img class="aspect__img collection__img" src="images/collection/coll-1.jpg" alt=""></div>
+                                        <img class="aspect__img collection__img" src="images/collection/tumblers.png" alt=""></div>
                                 </a></div>
                             <div class="col-lg-7 col-md-7 u-s-m-b-30">
 
                                 <a class="collection" href="shop-side-version-2.html">
                                     <div class="aspect aspect--bg-grey aspect--1286-890">
 
-                                        <img class="aspect__img collection__img" src="images/collection/coll-2.jpg" alt=""></div>
+                                        <img class="aspect__img collection__img" src="images/collection/makeup.jpg" alt=""></div>
                                 </a></div>
                             <div class="col-lg-7 col-md-7 u-s-m-b-30">
 
                                 <a class="collection" href="shop-side-version-2.html">
                                     <div class="aspect aspect--bg-grey aspect--1286-890">
 
-                                        <img class="aspect__img collection__img" src="images/collection/coll-3.jpg" alt=""></div>
+                                        <img class="aspect__img collection__img" src="images/collection/fragrance.png" alt=""></div>
                                 </a></div>
                             <div class="col-lg-5 col-md-5 u-s-m-b-30">
 
                                 <a class="collection" href="shop-side-version-2.html">
                                     <div class="aspect aspect--bg-grey aspect--square">
 
-                                        <img class="aspect__img collection__img" src="images/collection/coll-4.jpg" alt=""></div>
+                                        <img class="aspect__img collection__img" src="images/collection/plushies.png" alt=""></div>
                                 </a></div>
                         </div>
                     </div>
